2022-02-27  Chris Dumez  <cdumez@apple.com>

        Omit template parameter for SetForScope<> variables
        https://bugs.webkit.org/show_bug.cgi?id=237258

        Reviewed by Darin Adler.

        * wtf/RefCounter.h:
        (WTF::RefCounter<T>::Count::deref):

2022-02-26  Chris Dumez  <cdumez@apple.com>

        Drop Ref<>'s operator==() as it is a bit ambiguous / confusing
        https://bugs.webkit.org/show_bug.cgi?id=237231

        Reviewed by Darin Adler.

        Drop Ref<>'s operator==() as it is a bit ambiguous / confusing. Some people expect it to compare
        pointers while other expect it to compare the values we hold references to.
        It seems best to omit this operator and be explicit at call sites.

        * wtf/Ref.h:
        (WTF::operator==): Deleted.
        (WTF::operator!=): Deleted.
        * wtf/Vector.h:
        (WTF::Vector::containsIf const):

2022-02-25  Elliott Williams  <emw@apple.com>

        [XCBuild] Add missing header build rule for Scripts/Preferences/*
        https://bugs.webkit.org/show_bug.cgi?id=237129

        Reviewed by Alexey Proskuryakov.

        Relands "[XCBuild] WTF's SPI dependencies are copied via a folder reference and do not emit
        task outputs".

        r290452 missed adding a build rule which would copy $SRCROOT/Scripts/Preferences/* to
        /usr/local/include/wtf/Scripts/Preferences, and caused clean builds to start failing. Fix by
        adding the needed build rule.

        * Configurations/Base.xcconfig: 
        * Configurations/WTF.xcconfig:
        * Configurations/icu.xcconfig:
        * WTF.xcodeproj/project.pbxproj:

2022-02-24  Ryan Haddad  <ryanhaddad@apple.com>

        Unreviewed, reverting r290452.

        Caused failues with clean builds

        Reverted changeset:

        "[XCBuild] WTF's SPI dependencies are copied via a folder
        reference and do not emit task outputs"
        https://bugs.webkit.org/show_bug.cgi?id=237129