@@ -1,3 +1,12 @@
+2022-02-28  Tim Nguyen  <ntim@apple.com>
+
+        Enable inert attribute feature flag
+        https://bugs.webkit.org/show_bug.cgi?id=235668
+
+        Reviewed by Darin Adler.
+
+        * Scripts/Preferences/WebPreferencesExperimental.yaml:
+
 2022-02-27  Chris Dumez  <cdumez@apple.com>
 
         Omit template parameter for SetForScope<> variables
